llm-d/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-default
spec:
  controllerName: openshift.io/gateway-controller/v1 
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  listeners:
   - name: https
     hostname: llm-d.${CLUSTER_DOMAIN}
     port: 443
     protocol: HTTPS
     allowedRoutes:
       namespaces:
         from: All
     tls:
       certificateRefs:
       - group: ''
         kind: Secret
         name: ${CERT_NAME}
       mode: Terminate
    - name: http
      hostname: llm-d.${CLUSTER_DOMAIN}
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
